--- a/apps/router-web/package.json
+++ b/apps/router-web/package.json
@@ -6,7 +6,9 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "format": "prettier --write . --ignore-path .prettierignore",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@react-router/node": "^7.4.1",
