--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "turborepo-monorepo",
+  "name": "turborepo-starter",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-     "ui": "pnpm --filter=ui shadcn"
+    "format": "turbo format",
+    "ui": "pnpm --filter=ui shadcn"
   },
   "devDependencies": {
     "@workspace/eslint-config": "workspace:*",
