--- a/apps/next-web/package.json
+++ b/apps/next-web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "next-web",
   "version": "0.0.1",
   "type": "module",
   "private": true,
@@ -7,10 +7,11 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "typecheck": "tsc --noEmit",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
-    "typecheck": "tsc --noEmit",
-    "format": "prettier --write . --ignore-path .prettierignore"
+    "format": "prettier --write . --ignore-path .prettierignore",
+    "format:check": "prettier --check . --ignore-path .prettierignore"
   },
   "dependencies": {
     "@workspace/ui": "workspace:*",
