--- a/apps/router-web/package.json
+++ b/apps/router-web/package.json
@@ -7,8 +7,10 @@
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write . --ignore-path .prettierignore",
-    "lint": "eslint ."
+    "format:check": "prettier --check . --ignore-path .prettierignore"
   },
   "dependencies": {
     "@react-router/node": "^7.4.1",
