chore: shadcn ui setup added

--- a/apps/router-web/components.json
+++ b/apps/router-web/components.json
@@ -7,13 +7,14 @@
     "config": "",
     "css": "../../packages/ui/src/styles/globals.css",
     "baseColor": "neutral",
-    "cssVariables": true
+    "cssVariables": true,
+    "prefix": ""
   },
   "iconLibrary": "lucide",
   "aliases": {
-    "components": "@/components",
-    "hooks": "@/hooks",
-    "lib": "@/lib",
+    "components": "~/components",
+    "hooks": "~/hooks",
+    "lib": "~/lib",
     "utils": "@workspace/ui/lib/utils",
     "ui": "@workspace/ui/components"
   }
