--- a/apps/router-web/package.json
+++ b/apps/router-web/package.json
@@ -13,14 +13,15 @@
     "format:check": "prettier --check . --ignore-path .prettierignore"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.6",
     "@react-router/node": "^7.4.1",
     "@react-router/serve": "^7.4.1",
+    "@workspace/ui": "workspace:*",
     "isbot": "^5.1.17",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.4.1",
-    "@workspace/ui": "workspace:*",
-    "lucide-react": "^0.475.0"
+    "react-router": "^7.4.1"
   },
   "devDependencies": {
     "@react-router/dev": "^7.4.1",
@@ -28,12 +29,12 @@
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
+    "@workspace/eslint-config": "workspace:^",
+    "@workspace/typescript-config": "workspace:*",
     "react-router-devtools": "^1.1.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
-    "vite-tsconfig-paths": "^5.1.4",
-    "@workspace/eslint-config": "workspace:^",
-    "@workspace/typescript-config": "workspace:*"
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
