chore: added ts config for express app

--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,7 @@
       "persistent": true
     },
     "build": {
-      "dependsOn": ["^build", "lint", "format"],
+      "dependsOn": ["^build", "lint"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "cache": false,
       "persistent": true
@@ -18,19 +18,27 @@
       "persistent": true
     },
     "typecheck": {
-      "dependsOn": ["^typecheck"]
+      "dependsOn": ["^typecheck"],
+      "cache": true
     },
     "lint": {
-      "dependsOn": ["^lint"]
+      "dependsOn": ["^lint"],
+      "cache": true
     },
     "lint:fix": {
-      "dependsOn": ["^lint:fix"]
+      "dependsOn": ["^lint:fix"],
+      "cache": true
     },
     "format": {
-      "dependsOn": ["^format"]
+      "dependsOn": ["^format"],
+      "cache": true
     },
     "format:check": {
-      "dependsOn": ["^format:check"]
+      "dependsOn": ["^format:check"],
+      "cache": true
+    },
+    "clean": {
+      "dependsOn": ["^clean"]
     }
   }
 }
