--- a/apps/next-web/package.json
+++ b/apps/next-web/package.json
@@ -11,7 +11,9 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "format": "prettier --write . --ignore-path .prettierignore",
-    "format:check": "prettier --check . --ignore-path .prettierignore"
+    "format:check": "prettier --check . --ignore-path .prettierignore",
+    "clean": "rm -rf node_modules .next",
+    "clean:turbo": "rm -rf .turbo .next node_modules"
   },
   "dependencies": {
     "@workspace/ui": "workspace:*",
