chore: added reset script

--- a/apps/next-web/package.json
+++ b/apps/next-web/package.json
@@ -28,7 +28,6 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@workspace/eslint-config": "workspace:^",
-    "@workspace/typescript-config": "workspace:*",
-    "typescript": "^5.7.3"
+    "@workspace/typescript-config": "workspace:*"
   }
 }
