--- a/apps/express-rest-api/package.json
+++ b/apps/express-rest-api/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "description": "This is a Express REST API project with TypeScript, Node.js, Express, and MongoDB.",
   "dependencies": {
+    "@types/ms": "^2.1.0",
     "bcryptjs": "^3.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -30,15 +31,14 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@workspace/eslint-config": "workspace:^",
-    "@workspace/typescript-config": "workspace:*",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.9.1",
+    "@workspace/eslint-config": "workspace:^",
+    "@workspace/typescript-config": "workspace:*",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.13",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.3"
+    "tsconfig-paths": "^4.2.0"
   }
 }
