config: added scripts for individula apps in root package.json file

--- a/package.json
+++ b/package.json
@@ -12,10 +12,40 @@
     "lint:fix": "turbo lint:fix",
     "format": "turbo format",
     "format:check": "turbo format:check",
-    "clean": "turbo clean && rm -rf node_modules",
-    "clean:turbo": "turbo clean:turbo && rm -rf .turbo node_modules",
+    "clean": "turbo clean && rm -rf node_modules pnpm-lock.yaml",
+    "clean:turbo": "turbo clean:turbo && rm -rf .turbo node_modules pnpm-lock.yaml",
     "reset": "pnpm run clean:turbo && pnpm install",
-    "ui": "pnpm --filter=ui shadcn"
+    "ui": "pnpm --filter=ui shadcn",
+    "router:dev": "pnpm --filter=router-web dev",
+    "router:build": "pnpm --filter=router-web build",
+    "router:start": "pnpm --filter=router-web start",
+    "router:typecheck": "pnpm --filter=router-web typecheck",
+    "router:lint": "pnpm --filter=router-web lint",
+    "router:lint:fix": "pnpm --filter=router-web lint:fix",
+    "router:format": "pnpm --filter=router-web format",
+    "router:format:check": "pnpm --filter=router-web format:check",
+    "router:clean": "pnpm --filter=router-web clean",
+    "router:clean:turbo": "pnpm --filter=router-web clean:turbo",
+    "next:dev": "pnpm --filter=next-web dev",
+    "next:build": "pnpm --filter=next-web build",
+    "next:start": "pnpm --filter=next-web start",
+    "next:typecheck": "pnpm --filter=next-web typecheck",
+    "next:lint": "pnpm --filter=next-web lint",
+    "next:lint:fix": "pnpm --filter=next-web lint:fix",
+    "next:format": "pnpm --filter=next-web format",
+    "next:format:check": "pnpm --filter=next-web format:check",
+    "next:clean": "pnpm --filter=next-web clean",
+    "next:clean:turbo": "pnpm --filter=next-web clean:turbo",
+    "api:dev": "pnpm --filter=express-rest-api dev",
+    "api:build": "pnpm --filter=express-rest-api build",
+    "api:start": "pnpm --filter=express-rest-api start",
+    "api:typecheck": "pnpm --filter=express-rest-api typecheck",
+    "api:lint": "pnpm --filter=express-rest-api lint",
+    "api:lint:fix": "pnpm --filter=express-rest-api lint:fix",
+    "api:format": "pnpm --filter=express-rest-api format",
+    "api:format:check": "pnpm --filter=express-rest-api format:check",
+    "api:clean": "pnpm --filter=express-rest-api clean",
+    "api:clean:turbo": "pnpm --filter=express-rest-api clean:turbo"
   },
   "devDependencies": {
     "@workspace/eslint-config": "workspace:*",
